namespace Application.Sensors.Models.SendSensorData;

public sealed record SendSensorDataRequest(int SensorId, string Data);
